test/fail_compilation/contravariance.nt
module contravariance;

macro import std.macro.assert;

class A {
    this() { }
    void set(A a) { }
}

class B : A {
    this() { }
    override void set(B b) { }
}

void main() { }
